--- a/.editorconfig
+++ b/.editorconfig
@@ -1,4 +1,3 @@
-# Editor configuration, see https://editorconfig.org
 root = true
 
 [*]
@@ -6,6 +5,8 @@ charset = utf-8
 indent_style = space
 indent_size = 2
 insert_final_newline = true
+end_of_line = lf
+max_line_length = 90
 trim_trailing_whitespace = true
 
 [*.ts]
