--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint": "ng lint"
   },
   "private": true,
+  "packageManager": "bun@1.3.9",
   "dependencies": {
     "@angular/common": "^19.2.0",
     "@angular/compiler": "^19.2.0",
