--- a/package.json
+++ b/package.json
@@ -17,29 +17,22 @@
     "@angular/core": "^21.1.5",
     "@angular/forms": "^21.1.5",
     "@angular/platform-browser": "^21.1.5",
-    "@angular/platform-browser-dynamic": "^21.1.5",
     "@angular/router": "^21.1.5",
     "rxjs": "~7.8.0",
-    "tslib": "^2.3.0",
-    "zone.js": "~0.15.0"
+    "tslib": "^2.3.0"
   },
   "devDependencies": {
     "@angular/build": "^21.1.5",
     "@angular/cli": "^21.1.5",
     "@angular/compiler-cli": "^21.1.5",
-    "@types/jasmine": "~5.1.0",
     "angular-eslint": "21.0.1",
-    "eslint": "^9.39.1",
     "eslint-config-prettier": "^10.1.8",
-    "jasmine-core": "~5.6.0",
-    "karma": "~6.4.0",
-    "karma-chrome-launcher": "~3.2.0",
-    "karma-coverage": "~2.2.0",
-    "karma-jasmine": "~5.1.0",
-    "karma-jasmine-html-reporter": "~2.1.0",
-    "prettier": "^3.8.1",
+    "eslint": "^9.39.1",
+    "jsdom": "^27.1.0",
     "prettier-eslint": "^16.4.2",
+    "prettier": "^3.8.1",
+    "typescript-eslint": "8.46.4",
     "typescript": "~5.9.3",
-    "typescript-eslint": "8.46.4"
+    "vitest": "^4.0.8"
   }
 }
