--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -22,6 +22,7 @@
   "path-autocomplete.pathMappings": {
     "/fonts": "${folder}/public/fonts"
   },
+  "path-autocomplete.ignoredPrefixes": ["\"/", "'/", "`/"],
 
   // Formatting & Language specific
   // -----------------------------------------------------------------------------------------------
