--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test",
+    "test": "ng test --watch=false",
+    "test:watch": "ng test",
     "lint": "bun run lint:tsc && bun run lint:ng && prettier --check . || true",
     "lint:tsc": "tsc --noEmit -p tsconfig.app.json",
     "lint:ng": "ng lint",
