--- a/package.json
+++ b/package.json
@@ -30,11 +30,14 @@
     "@angular/build": "^21.1.5",
     "@angular/cli": "^21.1.5",
     "@angular/compiler-cli": "^21.1.5",
+    "@csstools/postcss-global-data": "^4.0.0",
     "angular-eslint": "21.0.1",
     "eslint": "^9.39.1",
     "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-simple-import-sort": "^12.1.1",
     "jsdom": "^27.1.0",
+    "postcss": "^8.5.6",
+    "postcss-custom-media": "^12.0.1",
     "prettier": "^3.8.1",
     "prettier-eslint": "^16.4.2",
     "quicktype": "^23.2.6",
